# eosc-file-format-identification-service

./: .env.example  .gitignore  Dockerfile  README.md  SPECIFICATION.docx  SPECIFICATION.md  docker-compose.yml  export-spec.sh  pyproject.toml  reference.docx
src/ffis/: __init__.py  cache.py  config.py  main.py  orchestrator.py
src/ffis/api/: routes.py
src/ffis/engines/: base.py  magika.py  siegfried.py  tika.py
src/ffis/models/: identification.py
src/ffis/static/: index.html
tests/: test_identification.py
