[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eosc-ffis"
version = "0.1.0"
description = "EOSC EDEN File Format Identification Service — multi-engine orchestration layer with PRONOM registry mapping and provenance tracking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "aiofiles>=23.2.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.9",
    "magika>=0.5.0",
]

[project.optional-dependencies]
tika = ["tika>=2.6.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[project.scripts]
ffis = "ffis.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
